--- a/ceptyconsultant.conf
+++ b/ceptyconsultant.conf
@@ -1,17 +1,21 @@
 server {
-    listen 80;
-    listen [::]:80;
-    server_name www.localhost;
+     listen 80;
+     listen 443 ssl http2;
+	 listen [::]:443 ssl http2;
+     server_name www.ceptyconsultant.localhost;
+     
+     ssl_certificate /usr/local/etc/ssl/certs/localhost.crt;
+     ssl_certificate_key /usr/local/etc/ssl/private/localhost.key;
+     
+     ssl_protocols TLSv1.2 TLSv1.1 TLSv1;
 
-    access_log  /var/log/nginx/wsgi-app.access.log;
-    error_log   /var/log/nginx/wsgi-app.error.log;
-
-    location / {
-        proxy_pass http://127.0.0.1:8000/;   
-        proxy_redirect   off;
-        # proxy_set_header Host $http_host;   
-        # proxy_set_header X-Real-IP $remote_addr;
-        # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        # proxy_set_header X-Forwarded-Proto $scheme;
-    }
-}
+ 
+     location / {
+         proxy_pass http://127.0.0.1:8000/;
+         proxy_redirect   off;
+         # proxy_set_header Host $http_host;   
+         # proxy_set_header X-Real-IP $remote_addr;
+         # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+         # proxy_set_header X-Forwarded-Proto $scheme;
+     }
+ }
