--- a/ceptyconsultant.conf
+++ b/ceptyconsultant.conf
@@ -2,7 +2,7 @@ server {
      listen 80;
      listen 443 ssl http2;
 	 listen [::]:443 ssl http2;
-     server_name www.ceptyconsultant.localhost;
+     server_name www.api.ceptyconsultant.localhost;
      
      # MAC
      # ssl_certificate /home/rochet/Projets/api_ceptyconsultant/localhost.crt;
