--- a/ceptyconsultant.conf
+++ b/ceptyconsultant.conf
@@ -1,18 +1,34 @@
 server {
      listen 80;
-    #  listen 443 ssl http2;
-    #  listen [::]:443 ssl http2;
-     server_name www.api.ceptyconsultant.localhost;
+     listen 443 ssl http2;
+	 listen [::]:443 ssl http2;
+     server_name api.ceptyconsultant.localhost;
      
-     # MAC
-     # ssl_certificate /home/rochet/Projets/api_ceptyconsultant/localhost.crt;
-     # ssl_certificate /home/rochet/Projets/api_ceptyconsultant/localhost.crt;
+     ssl_certificate /usr/local/etc/ssl/certs/localhost.crt;
+     ssl_certificate_key /usr/local/etc/ssl/private/localhost.key;
      
-     # UBUNTU
-     ssl_certificate /home/rochet/Projets/api_ceptyconsultant/localhost.crt;
-     ssl_certificate_key /home/rochet/Projets/api_ceptyconsultant/localhost.key;
+     ssl_protocols TLSv1.2 TLSv1.1 TLSv1;
 
-		
+ 
+     location / {
+         proxy_pass http://127.0.0.1:8000/;
+         proxy_redirect   off;
+         # proxy_set_header Host $http_host;   
+         # proxy_set_header X-Real-IP $remote_addr;
+         # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+         # proxy_set_header X-Forwarded-Proto $scheme;
+     }
+ }
+
+server {
+     listen 80;
+     listen 443 ssl http2;
+	 listen [::]:443 ssl http2;
+     server_name ceptyconsultant.localhost;
+     
+     ssl_certificate /usr/local/etc/ssl/certs/localhost.crt;
+     ssl_certificate_key /usr/local/etc/ssl/private/localhost.key;
+     
      ssl_protocols TLSv1.2 TLSv1.1 TLSv1;
 
  
