--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
 aniso8601==8.0.0
+certifi==2019.11.28
+chardet==3.0.4
 Click==7.0
 Flask==1.1.1
 Flask-HTTPAuth==3.3.0
 Flask-RESTful==0.3.7
 gunicorn==20.0.4
+idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.0
 MarkupSafe==1.1.1
 PyJWT==1.7.1
 pytz==2019.3
+requests==2.23.0
 six==1.14.0
+urllib3==1.25.8
 Werkzeug==0.16.1
