--- a/ceptyconsultant.conf
+++ b/ceptyconsultant.conf
@@ -4,8 +4,8 @@ server {
 	 listen [::]:443 ssl http2;
      server_name api.ceptyconsultant.localhost;
      
-     ssl_certificate /usr/local/etc/ssl/certs/localhost.crt;
-     ssl_certificate_key /usr/local/etc/ssl/private/localhost.key;
+     ssl_certificate /home/rochet/Projets/api_ceptyconsultant/localhost.crt;
+     ssl_certificate_key /home/rochet/Projets/api_ceptyconsultant/localhost.key;
      
      ssl_protocols TLSv1.2 TLSv1.1 TLSv1;
 
@@ -13,7 +13,7 @@ server {
      location / {
          proxy_pass http://127.0.0.1:8000/;
          proxy_redirect   off;
-         # proxy_set_header Host $http_host;   
+         proxy_set_header Host $http_host;   
          # proxy_set_header X-Real-IP $remote_addr;
          # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
          # proxy_set_header X-Forwarded-Proto $scheme;
@@ -26,16 +26,16 @@ server {
 	 listen [::]:443 ssl http2;
      server_name ceptyconsultant.localhost;
      
-     ssl_certificate /usr/local/etc/ssl/certs/localhost.crt;
-     ssl_certificate_key /usr/local/etc/ssl/private/localhost.key;
-     
+     ssl_certificate /home/rochet/Projets/api_ceptyconsultant/localhost.crt;
+     ssl_certificate_key /home/rochet/Projets/api_ceptyconsultant/localhost.key;
+
      ssl_protocols TLSv1.2 TLSv1.1 TLSv1;
 
  
      location / {
          proxy_pass http://127.0.0.1:5000/;
          proxy_redirect   off;
-         # proxy_set_header Host $http_host;   
+         proxy_set_header Host $http_host;   
          # proxy_set_header X-Real-IP $remote_addr;
          # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
          # proxy_set_header X-Forwarded-Proto $scheme;
